Add something new

--- a/_posts/0000-01-02-nborson.md
+++ b/_posts/0000-01-02-nborson.md
@@ -2,10 +2,10 @@
 
 layout: slide
 
-title: "Welcome to our second slide!"
+title: "It is far better to _sit idle_ than to do _nothing at all_."
 
 ---
 
-If I had something to say, I would say it!
+If I had something else to say, I would say it!
 
 Use the left arrow to go back!
